# backend

./: .gitignore  .pre-commit-config.yaml  CHROMADB_FIX_SUMMARY.md  DNS_ERROR_DIAGNOSIS.md  ENV_SETUP_GUIDE.md  FIXES_APPLIED.md  MERGE_COMPLETED.md  NOTES_AUTHENTICATION_FIX.md  README.md  ROUTE_FIX_SUMMARY.md  STREAMING_FRONTEND_GUIDE.md  UNIFIED_BACKEND_GUIDE.md  celery_test.py  chroma_test.py  dump.rdb  embed.py  enable.py  main2.py  migrate_existing_users.py  pyproject.toml  query.py  readme.md  run.sh  stop.sh  supabase_schema_notes_only.sql  supabase_schema_unified.sql  task2.py  task_copy.py  test_actual_pdf_workflow.py  test_admin_create_user.py  test_embedding.py  test_embedding_issue.py  test_notes_endpoint.py  test_script.py  test_supabase_auth.py  test_with_cleaning.py  verify_supabase_config.py
app/: celery_app.py  config.py  main.py  schemas.py  tasks.py
app/auth/: auth.py  supabase_client.py
app/routes/: __init__.py  admin.py  auth.py  chat.py  documents.py  flashcards.py  notes.py  query.py  quizzes.py  stats.py  users.py
app/services/: chat_service.py  chunker.py  document_service.py  embeddings.py  file_storage.py  flashcard_service.py  flashcard_strategy.py  notes_chroma.py  notes_db.py  notes_llm.py  pdf_loader.py  quiz_attempt_service.py  quiz_service.py  rag.py  retriever.py  storage_service.py  user_service.py  vectorstore.py
app/tasks/: __init__.py  notes_tasks.py  rag_tasks.py
app/utils/: __init__.py  chunking.py  embeddings.py  file_utils.py  text_extraction.py
chroma_db/: chroma.sqlite3
migrations/: QUIZ_MIGRATION_CHECKLIST.md  create_quiz_tables.sql  disable_trigger_for_migration.sql  fix_notes_foreign_keys.sql  fix_quiz_foreign_keys.sql  migrate_to_supabase_auth.sql  reenable_trigger_after_migration.sql
notes/: GZ_Syllabus.md  Iterator_Pattern_in_Project.md  L_13_C_23.md  L_15_C_23.md  L_18_C_23.md  L_19_C_23.md  note_1ce635fe_untitled.md  note_7b749be5_untitled.md  note_b9275ae9_untitled.md
tests/: celery_test.py  chroma_test.py  conftest.py  test_celery.py  test_chromadb.py  test_embeddings.py  test_notes_database.py  test_pdf_processing.py  test_pdf_workflow.py
