[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for SDP Lab Project"
authors = ["voe voe <your_email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
redis = "^5.3"
PyPDF2 = "^3.0.1"
qdrant-client = "^1.2"

pydantic = {extras = ["email"], version = "^2.12.3"}
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
chromadb = "^1.0.20"
celery = "^5.5.3"
python-multipart = "^0.0.20"
langchain = "^0.3.27"
langchain-community = "^0.3.29"

langchain-chroma = "^0.2.5"
langchain-google-genai = "^2.1.12"
huggingface-hub = "^0.35.3"
tokenizers = "^0.22.1"
torch = {version = "^2.8.0", source = "pytorch-cpu"}
sentence-transformers = "^5.1.1"
supabase = "^2.20.0"
email-validator = "^2.3.0"

# Notes-specific dependencies
pymupdf = "^1.24.0"
pdfplumber = "^0.11.0"
tiktoken = "^0.8.0"
markdown-pdf = "^1.2"
httpx = "^0.28.1"
nltk = "^3.9"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
openai = "^1.0.0"
langchain-huggingface = "<1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pre-commit = "^4.3.0"
pytest = "^8.4.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["app"]

